--- a/index.html
+++ b/index.html
@@ -4,7 +4,307 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panda E-Commerce</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- NavBar -->
+    <div class="container">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="panda-commerce/logo.png " alt="" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Backpack</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Subscribe</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <!-- Carousel Part -->
+    <div class="container">
+      <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide orange_bg"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row align-items-center">
+              <div class="col-sm-7 col-md-7">
+                <h1>MI HeadPhone</h1>
+                <p>
+                  This is the best headphone in the world for people who just
+                  want to waste in front of funky world
+                </p>
+                <h1 class="price">$600</h1>
+                <button class="buy_now_btn">BUY NOW</button>
+              </div>
+              <div class="col-sm-5 col-md-5">
+                <img
+                  src="panda-commerce/banner-images/headphone.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-sm-7 col-md-7">
+                <h1>LG TV Sports</h1>
+                <p>
+                  This is the best tv in the world for people who just want to
+                  waste in front of tv
+                </p>
+                <h1 class="price">$1200</h1>
+                <button class="buy_now_btn">BUY NOW</button>
+              </div>
+              <div class="col-sm-5 col-md-5">
+                <img
+                  src="panda-commerce/banner-images/tv.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-sm-7 col-md-7">
+                <h1>Xbox Wireless</h1>
+                <p>
+                  Support AV direct connection to TV.Large capacity, you can
+                  play for 6-7 hours.Large memory 500 games
+                </p>
+                <h1 class="price">$500</h1>
+                <button class="buy_now_btn">BUY NOW</button>
+              </div>
+              <div class="col-sm-5 col-md-5">
+                <img
+                  src="panda-commerce/banner-images/xbox.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Categoris -->
+    <div class="container categories">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="cat1 d-flex justify-content-around align-items-center">
+            <h1>Watch</h1>
+            <img src="panda-commerce/categories/watch.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat2 d-flex justify-content-around align-items-center">
+            <h1>Bag</h1>
+            <img src="panda-commerce/categories/bag.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat3 d-flex justify-content-around align-items-center">
+            <h1>Shoes</h1>
+            <img src="panda-commerce/categories/shoes.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card section -->
+    <div class="container shoes" id="shoes">
+      <h3>Shoes</h3>
+      <div class="row row-cols-3 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="panda-commerce/shoes/shoe-1.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">
+                Supply 350 This is a longer card with supporting text below as a
+                natural lead-in to additional content. This content is a little
+                bit longer.
+              </p>
+              <h5 class="price" style="color: black">$120</h5>
+              <button class="buy_now_btn">BUY NOW>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="panda-commerce/shoes/shoe-2.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Nike 320</h5>
+              <p class="card-text">
+                This card has supporting text below as a natural lead-in to
+                additional content.
+              </p>
+              <h5 class="price" style="color: black">$320</h5>
+              <button class="buy_now_btn">BUY NOW>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="panda-commerce/shoes/shoe-3.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Red Max</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural .
+              </p>
+              <h5 class="price" style="color: black">$350</h5>
+              <button class="buy_now_btn">BUY NOW>></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Bags -->
+    <div class="container" id="bagpack">
+      <h3>Bagpack</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="panda-commerce/bags/bag-1.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Red Backpack</h5>
+              <h5 class="price">$15</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+            <div class="card-footer">
+              <button class="buy_now_btn">BUY NOW »</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="panda-commerce/bags/bag-2.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Blue backpack</h5>
+              <h5 class="price">$320</h5>
+              <p class="card-text">
+                This card has supporting text below as a natural lead-in to
+                additional content.
+              </p>
+            </div>
+            <div class="card-footer">
+              <button class="buy_now_btn">BUY NOW »</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="panda-commerce/bags/bag-3.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Black Backpack</h5>
+              <h5 class="price">$169</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content..
+              </p>
+            </div>
+            <div class="card-footer">
+              <button class="buy_now_btn">BUY NOW »</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Subscribe -->
+    <div
+      class="container d-flex justify-content-center align-items-center orange_bg"
+      id="subscribe"
+    >
+      <div class="subscribe">
+        <h5>LET'S STAY IN TOUCH</h5>
+        <p>Get Update on sales specials and more</p>
+        <input
+          class="form-control"
+          type="email"
+          placeholder="Enter your email"
+        />
+        <button class="buy_now_btn mt-1">Submit</button>
+      </div>
+    </div>
+    <!-- footer -->
+    <div class="container">
+      <footer>
+        <small
+          >©2023 Panda Commerce. All rights reserved. Sofia, Bulgaria</small
+        >
+      </footer>
+    </div>
+    <!-- Js style plugging Link Add -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
